[package]
name = "dungeon_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
tiled-json-rs = "0.2.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.raylib]
version = "5.0.0"
git = "https://github.com/bitten2up/raylib-rs"
branch = "5.0.0"
